fixed an issue with the index.html screen being too narrow

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,7 @@
 
 
   .container {
-    width:100%;
+    width:30rem;
     height:10rem;
     display:flex;
     align-items:center;
